# galaxy_simulator

./: .gitignore  Build.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  explication problem N body.odt
3D/include/: Boite.hpp  Constants.hpp  Espace3D.hpp  IIntegrator.hpp  IModel.hpp  IntegratorADB5.hpp  IntegratorADB6.hpp  IntegratorRK4.hpp  IntegratorRK5.hpp  IntegratorRKF4.hpp  ModelNBody.hpp  NBodyWnd.hpp  Octree.hpp  Particule3D.hpp  SDLWnd.hpp
3D/src/: Boite.cpp  Espace3D.cpp  IIntegrator.cpp  IntegratorADB5.cpp  IntegratorADB6.cpp  IntegratorRK4.cpp  IntegratorRK5.cpp  IntegratorRKF4.cpp  ModelNBody.cpp  NBodyWnd.cpp  Octree.cpp  Particule3D.cpp  SDLWnd.cpp  main.cpp
Python 2D/: BHTree.py  Body.py  MCgalaxy.py  Quad.py  QuadTree.py  Test.py
essai/: CMakeLists.txt  my_program
essai/include/: ModelNBody.hpp  Octree.hpp
essai/src/: ModelNBody.cpp  Octree.cpp  main.cpp
essai_octree/: CMakeLists.txt  my_program
essai_octree/include/: Boite.hpp  Octree.hpp  Particule3D.hpp
essai_octree/src/: Boite.cpp  Octree.cpp  Particule3D.cpp  cube_test.cpp  main.cpp
include/: BHTree.h  Boite.h  Constants.h  IIntegrator.h  IModel.h  IntegratorADB6.h  IntegratorRK4.h  ModelNBody.h  NBodyWnd.h  Octree.h  Particule3D.h  PosParticule3D.h  SDLWnd.h  Types.h  Vector.h
src/: BHTree.cpp  Boite.cpp  IIntegrator.cpp  IntegratorADB6.cpp  IntegratorRKF4.cpp  ModelNBody.cpp  NBodyWnd.cpp  Octree.cpp  Particule3D.cpp  PosParticule3D.cpp  SDLWnd.cpp  Types.cpp  Vector.cpp  main.cpp
